--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -3,5 +3,7 @@
     xmlns="sap.m"
     displayBlock="true"
     controllerName="ui5.walkthrough.controller.App">
-    <App id="app" />
+    <Shell id="shell" appWidthLimited="false" >
+         <App id="app"/>
+    </Shell>
 </mvc:View>
