--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -6,20 +6,92 @@
         <customHeader>
             <OverflowToolbar class="sapMHeader-CTX detailBackground">
                 <ToolbarSpacer />
-                <Title text="Purchase Order"/>
+                <Title text="Purchase Order" />
                 <ToolbarSpacer />
             </OverflowToolbar>
         </customHeader>
         <content>
-            <VBox>
-                <Text text="test"/>
-                <Text text="{PurchaseOrder}" />
+            <VBox class="detailBox">
+                <HBox>
+                    <VBox width="70%">
+                        <Text text="{AddressName}" class="customAdress" />
+                        <Text text="" />
+                    </VBox>
+                    <ToolbarSpacer />
+                    <ToolbarSpacer />
+                    <VBox width="30%" alignItems="End">
+                        <Text text="{DocumentCurrency}" textAlign="Right" />
+                    </VBox>
+                </HBox>
+                <HBox>
+                    <VBox width="70%">
+                        <Text text="{CreatedByUser}" class="detailCreatedBy" />
+                        <Text text="" />
+                    </VBox>
+                    <ToolbarSpacer />
+                    <ToolbarSpacer />
+                    <VBox width="30%" alignItems="End">
+                        <Text text="{path: 'LastChangeDateTime', formatter: '.formatter.dateFormatter'}" textAlign="Right" />
+                    </VBox>
+                </HBox>
+                <HBox>
+                    <Button icon="sap-icon://hint" press=".onInfoPress"/>
+                    <Button icon="sap-icon://notes" press=".onNotepadPress"/>
+                </HBox>
+            </VBox>
+            <!-- New Section for Detailed Content -->
+            <VBox id="detailedContent" visible="{view>/showDetailedContent}" justifyContent="Center" alignItems="Center" width="100%">
+                <HBox width="80%">
+                    <FlexBox justifyContent="End" width="20%">
+                        <Text text="Purchase Order:" class="colorGrey"/>
+                    </FlexBox>
+                    <FlexBox justifyContent="Start" >
+                        <Text text="{= ${PurchaseOrder} !== null ? ${PurchaseOrder} : ''}" class="labelTextSpacing"/>
+                    </FlexBox>
+                </HBox>
+                <HBox width="80%">
+                    <FlexBox justifyContent="End"  width="20%">
+                        <Text text="Delivery Date:" class="colorGrey"/>
+                    </FlexBox>
+                    <FlexBox justifyContent="Start" visible="{= ${PurchaseOrder} !== null}">
+                        <Text text="01.01.1970" class="labelTextSpacing"/>
+                    </FlexBox>
+                </HBox>
+                <HBox width="80%">
+                    <FlexBox justifyContent="End"  width="20%">
+                        <Text text="Payment Terms:" class="colorGrey"/>
+                    </FlexBox>
+                    <FlexBox justifyContent="Start"  visible="{= (${CashDiscount1Days} !== null || ${CashDiscount1Percent} !== null) || (${CashDiscount2Days} !== null || ${CashDiscount2Percent} !== null)}">
+                        <Text text="{ parts: [{path: 'CashDiscount1Days'}, {path: 'CashDiscount1Percent'}], formatter: '.formatCashDiscount' }" class="labelTextSpacing" />
+                        <Text text="/" class="labelTextSpacing" />
+                        <Text text="{ parts: [{path: 'CashDiscount2Days'}, {path: 'CashDiscount2Percent'}], formatter: '.formatCashDiscount' }" class="labelTextSpacing" />
+                        <Text text="/" class="labelTextSpacing" />
+                        <Text text="{NetPaymentDays}" class="labelTextSpacing" />
+                        <Text text="Tage Netto" class="labelTextSpacing" />
+                    </FlexBox>
+                </HBox>
+                <HBox width="80%">
+                    <FlexBox justifyContent="End"  width="20%">
+                        <Text text="Incoterms:" class="colorGrey"/>
+                    </FlexBox>
+                    <FlexBox justifyContent="Start">
+                        <Text text="{ parts: [{path: 'IncotermsClassification'}, {path: 'IncotermsLocation1'}], formatter: '.formatIncoterms' }" class="labelTextSpacing" />
+                    </FlexBox>
+                </HBox>
 
-                <Label text="{i18n>addressLabel}" />
-                <Text text="{orderModel>/selectedOrder/AddressName}" />
-
-                <Label text="{i18n>createdByLabel}" />
-                <Text text="{= 'Created By: ' + ${orderModel>/selectedOrder/CreatedByUser} }" class="createdByText" />
+                <HBox width="80%">
+                    <FlexBox justifyContent="End" width="20%">
+                        <Text text="CompanyCode:" class="colorGrey"/>
+                    </FlexBox>
+                    <FlexBox justifyContent="Start">
+                        <Text text="{= ${CompanyCode} !== null ? ${CompanyCode} : ''}" class="labelTextSpacing"/>
+                    </FlexBox>
+                </HBox>
+            </VBox>
+            <VBox id="noteContent" visible="{view>/showNoteContent}" justifyContent="Center" alignItems="Center" width="100%">
+                <HBox width="50%">
+                        <Text text="Hier muss noch der Inhalt eingefügt werden!:" />
+                </HBox>                
             </VBox>
         </content>
     </Page>
