--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -22,15 +22,13 @@
             includeItemInSelection="true"
             updateFinished=".updateOrderCount"
             selectionChange=".onOrderPress"
-
             itemPress=".onOrderPress">
             <CustomListItem press=".onOrderPress">
                 <HBox>
                     <VBox width="70%">
-                        <Text text="Delivery Date: 01.01.1970"/>
-                        <Text text="{PurchaseOrder}" />
                         <Text text="{AddressName}" />
                         <Text text="{= 'Created By: ' + ${CreatedByUser} }" class="createdByText" />
+                        <!-- Display Plant from to_PurchaseOrderItem -->
                     </VBox>
                     <VBox width="30%" alignItems="End">
                         <Text text="{path: 'LastChangeDateTime', formatter: '.formatter.dateFormatter'}" />
