--- a/webapp/css/createdByText.css
+++ b/webapp/css/createdByText.css
@@ -2,3 +2,8 @@
     font-size: 11px; /* oder eine andere gewünschte Größe */
     color: gray;
 }
+
+.createdByText1 {
+    font-size: 9px; /* oder eine andere gewünschte Größe */
+    color: gray;
+}
