--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -77,36 +77,37 @@
                             </HBox>
                         </VBox>
                     </IconTabFilter>
-                    <IconTabFilter icon="sap-icon://notes" count="2" text="Notes" iconColor="Default">
-                        <VBox width="100%">
-                            <List>
-                                <items>
-                                    <CustomListItem>
-                                        <HBox alignItems="Center">
-                                            <core:Icon src="sap-icon://person-placeholder" class="personIcon"/>
-                                            <VBox justifyContent="Start" alignItems="Start" width="100%" visible="{= ${PurchaseOrder} !== null}">
-                                                <HBox>
-                                                    <Text text="Bestandsprüfung ergab erreichen des Break-Even-Points am 19.06.2024." class="customMarginTop"/>
-                                                </HBox>
-                                                <Text text="Commented by: {CreatedByUser} (14.06.2024)" class="createdByText1"/>
-                                            </VBox>
-                                        </HBox>
-                                    </CustomListItem>
-                                    <CustomListItem>
-                                        <HBox alignItems="Center">
-                                            <core:Icon src="sap-icon://person-placeholder" class="personIcon"/>
-                                            <VBox justifyContent="Start" alignItems="Start" width="100%" visible="{= ${PurchaseOrder} !== null}" class="customMarginTop">
-                                                <HBox>
-                                                    <Text text="Diese Bestellung ist dringend für die Produktion." class="sapUiTinyMarginEnd"/>
-                                                </HBox>
-                                                <Text text="Commented by: Mary (12.06.2024)" class="createdByText1"/>
-                                            </VBox>
-                                        </HBox>
-                                    </CustomListItem>
-                                </items>
-                            </List>
+<IconTabFilter icon="sap-icon://notes" count="{= ${PurchaseOrder} ? '2' : '0' }" text="Notes" iconColor="Default">
+    <VBox width="100%">
+        <List visible="{= ${PurchaseOrder} !== null}">
+            <items>
+                <CustomListItem>
+                    <HBox alignItems="Center">
+                        <core:Icon src="sap-icon://person-placeholder" class="personIcon"/>
+                        <VBox justifyContent="Start" alignItems="Start" width="100%">
+                            <HBox>
+                                <Text text="Bestandsprüfung ergab erreichen des Break-Even-Points am 19.06.2024." class="customMarginTop"/>
+                            </HBox>
+                            <Text text="Commented by: {CreatedByUser} (14.06.2024)" class="createdByText1"/>
                         </VBox>
-                    </IconTabFilter>
+                    </HBox>
+                </CustomListItem>
+                <CustomListItem>
+                    <HBox alignItems="Center">
+                        <core:Icon src="sap-icon://person-placeholder" class="personIcon"/>
+                        <VBox justifyContent="Start" alignItems="Start" width="100%" class="customMarginTop">
+                            <HBox>
+                                <Text text="Diese Bestellung ist dringend für die Produktion." class="sapUiTinyMarginEnd"/>
+                            </HBox>
+                            <Text text="Commented by: Mary (12.06.2024)" class="createdByText1"/>
+                        </VBox>
+                    </HBox>
+                </CustomListItem>
+            </items>
+        </List>
+    </VBox>
+</IconTabFilter>
+
                 </items>
             </IconTabBar>
         </content>
