--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -21,21 +21,15 @@
             mode="SingleSelectMaster"
             includeItemInSelection="true"
             updateFinished=".updateOrderCount"
-            selectionChange=".onOrderPress"
-            itemPress=".onOrderPress">
-            <CustomListItem press=".onOrderPress">
-                <HBox>
-                    <VBox width="70%">
-                        <Text text="{AddressName}" />
-                        <Text text="{= 'Created By: ' + ${CreatedByUser} }" class="createdByText" />
-                        <!-- Display Plant from to_PurchaseOrderItem -->
-                    </VBox>
-                    <VBox width="30%" alignItems="End">
-                        <Text text="{path: 'LastChangeDateTime', formatter: '.formatter.dateFormatter'}" />
-                        <Text text="{DocumentCurrency}" />
-                    </VBox>
-                </HBox>
-            </CustomListItem>
+            selectionChange=".onOrderPress">
+            <ObjectListItem press=".onOrderPress" title="{AddressName}" number="1" numberUnit="{DocumentCurrency}" class="createdByText" >
+                <firstStatus>
+                    <ObjectStatus text="{path: 'LastChangeDateTime', formatter: '.formatter.dateFormatter'}" class="createdByText" />
+                </firstStatus>
+                <attributes>
+                    <ObjectAttribute text="{= 'Created By: ' + ${CreatedByUser} }" class="createdByText" />
+                </attributes>
+            </ObjectListItem>
         </List>
     </Page>
 </mvc:View>
