Order Item Detail Navigation complete

--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -141,7 +141,7 @@
                         </Column>
                     </columns>
                     <items>
-                        <ColumnListItem>
+                        <ColumnListItem type="Navigation" press="onNavToOrderItemDetail">
                             <cells>
                                 <Text text="{PurchaseOrderItemText}"/>
                                 <Text text="{PurchaseOrderItemCategory}"/>
@@ -149,6 +149,10 @@
                                 <Text text="{ path: 'NetPriceAmount', formatter: '.formatPricePerPiece' }"/>
                                 <Text text="{parts: [{path: 'OrderQuantity'}, {path: 'NetPriceAmount'}], formatter: '.calculateSubtotal'}"/>
                             </cells>
+                            <customData>
+                                <core:CustomData key="purchaseOrder" value="{PurchaseOrder}" writeToDom="true" />
+                                <core:CustomData key="purchaseOrderItem" value="{PurchaseOrderItem}" writeToDom="true" />
+                            </customData>
                         </ColumnListItem>
                     </items>
                 </Table>
